tests/mm0_mmu/fail/bad-sort342.mm0
-- bad modifier order
provable free strict sort s342;